--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <div class="rbq">
         <div class="title">表情包制作</div>
         <div class="subtitle">点击图片和文字即可更换内容, 生成后的图片长按保存</div>
+        <div class="subtitle"><a href="https://github.com/Ice-Hazymoon/bqb_tnt">查看源代码</a></div>
         <ul class="select-img" title="选择模板">
             <li><img src="./images/rbq_1.jpg" alt=""></li>
             <li><img src="./images/rbq_2.jpg" alt=""></li>
