更新一大波功能

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
 <body>
     <div class="rbq">
         <div class="title">表情包制作</div>
-        <div class="subtitle">点击图片和文字即可更换内容, 生成后的图片长按保存</div>
         <div class="subtitle"><a href="https://github.com/Ice-Hazymoon/bqb_tnt">查看源代码</a></div>
         <ul class="select-img" title="选择模板">
             <li><img src="./images/rbq_1.jpg" alt=""></li>
@@ -26,7 +25,12 @@
         <div class="btnbox">
             <button class="btn" id="font-centering">居中</button>
             <button class="btn" id="font-bold">加粗</button>
-            <button class="btn" id="download">生成</button><br>
+            <button class="btn" id="font-italic">斜体</button>
+            <button class="btn" id="font-enlarge">放大</button>
+            <button class="btn" id="font-reduce">缩小</button>
+            <button class="btn" id="font-css">CSS</button>
+            <button class="btn" id="download">立即生成</button>
+            <button class="btn" id="instructions">使用方法</button><br>
             <button class="btn" id="start-tnt">开启 TNT 模式</button>
             <div id="tnt" style="display:none;">
                 <button class="btn" id="start-recording">录音</button>
